k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aurumharmony
  labels:
    name: aurumharmony
    environment: production
